# utils-service

./: .gitignore  AGENTS.md  Dockerfile  README.md  ecosystem.config.cjs  package-lock.json  package.json  pyproject.toml
agents/: msoffice2md.agent.md
app/: __init__.py  main.py
app/api/v1/: docx_markdown.py  markdown.py  md_docx.py  mermaid.py  pdf.py  plantuml.py
app/core/: config.py  uploads.py
app/docs/: README.md  api.md  architecture.md  install-and-run.md
app/models/: schemas.py
app/services/: docx_to_markdown.py  markdown_ast_normalize.py  markitdown_convert.py  md_to_docx.py  mermaid_render.py  pdf_extract.py  plantuml_render.py  track_changes_postprocess.py
client/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/docs/: AGENTS.md  README.md  install-and-run.md
client/src/: layout.ts  main.ts  router.ts  style.css
client/src/lib/: files.ts  health.ts  http.ts  ui.ts
client/src/pages/: docx-to-markdown.ts  home.ts  markdown-to-docx.ts  mermaid.ts  pdf-to-text.ts  plantuml.ts  to-markdown.ts
docs/: AGENT_WORKFLOW.md  SERVICE_AND_CLIENT_PATTERN.md
mermaid-cli/: package-lock.json  package.json
tests/: test_docx_markdown.py  test_md_docx.py  test_mermaid.py  test_plantuml.py  test_uploads.py
tests/fixtures/: _build_image.md  layout_table.html  simple.docx  track_changes_ast.json  with_image.docx
