[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils-service"
version = "0.1.0"
description = "Małe usługi REST (PDF → tekst, pliki → Markdown, Markdown → DOCX, PlantUML → obraz)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.13",
    "markitdown>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
